# ComfyUI-Ideogram-Palette-and-Prompt-Tools

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
nodes/: element_builder.py  element_palette.py  json_validator.py  masked_palette_extractor.py  metadata_embedder.py  metadata_file_reader.py  metadata_reader.py  palette_blend.py  palette_extractor.py  palette_override.py  palette_to_json.py  prompt_assembler.py  vibrant_palette_extractor.py  visual_prompt_designer.py
tests/: test_color_utils.py  test_element_builder.py  test_extractor.py  test_json_validator.py  test_masked_palette_extractor.py  test_metadata_embedder.py  test_metadata_file_reader.py  test_metadata_reader.py  test_palette_blend.py  test_palette_override.py  test_palette_to_json.py  test_prompt_assembler.py  test_vibrant_palette_extractor.py  test_visual_prompt_designer.py  test_workflows.py
tools/: palette_batch.py
utils/: designer_model.py  schema_utils.py
workflows/: README.md  palette_reference_workflow.json  palette_study_3way_workflow.json  showcase_01_palette_to_prompt_pipeline.json  showcase_02_blend_content_and_style.json  showcase_03_vibrant_vs_frequency.json  showcase_04_masked_subject_and_global.json  showcase_05_embed_recover_roundtrip.json  showcase_06_per_element_palettes.json
