[project]
name = "comfyui-ideogram-palette-and-prompt-tools"
description = "Extract color palettes from reference images and assemble/validate/embed Ideogram 4's structured prompt JSON."
version = "1.1.1"
license = { file = "LICENSE" }
authors = [
  { name = "SurrealByDesign" }
]
readme = "README.md"
requires-python = ">=3.10"
# Keep in sync with requirements.txt -- scikit-learn is the only genuine
# extra dependency (see requirements.txt for why torch/numpy/Pillow are
# deliberately excluded here and there).
dependencies = ["scikit-learn"]

[project.urls]
Repository = "https://github.com/SurrealByDesign/ComfyUI-Ideogram-Palette-and-Prompt-Tools"

[tool.comfy]
PublisherId = "surrealbydesign"
DisplayName = "ComfyUI Ideogram Palette and Prompt Tools"
Icon = "https://raw.githubusercontent.com/SurrealByDesign/ComfyUI-Ideogram-Palette-and-Prompt-Tools/main/assets/registry_icon.png"
